<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BOSCONET</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="font_Title">PlayfairDisplay-Regular.ttf</string>
    <string name="font_Description">EBGaramond-Regular.ttf</string>
    <string name="font_Heading">impact.ttf</string>


    <string name="whoWeAre">A network that cares for the young at risk. The Don Bosco Network is the face of 254 Don Bosco NGOs working for the marginalised since 1906.\n\nThe resource development arm of Don Bosco India, it was formed in 2016. It was previously known as Bosconet.\n\nIt strengthens capacities of 11 Don Bosco planning and development offices across India, in developing national strategies to promote sustainable development.\n\nOur chosen areas of focus are the empowerment of the young at risk, women and families, skilling youth, and caring for the planet.</string>
    <string name="ourMission1">-To enable those in need to rightfully access their resources.\n\n-To promote opportunities and interventions for the well-being of young people in South Asia, without any form of discrimination.\n\n–To generate consciousness about social issues and inspire individuals, institutions, corporates and governments to contribute resources towards their resolution.\n\n-To excel in resource development while ensuring transparency and accountability.</string>
    <string name="ourVision">The Don Bosco Network envisages a just world; where the youth and marginalised communities are protagonists of social development; where productive citizens live in dignity, and care for our common home – the Earth.</string>
    <string name="giftEducation" tools:ignore="TypographyDashes"> Light up a child’s life with education. Let’s tell you why.\n\n– The percentage of rural children who were never enrolled in school (5-29 years) is double than that of urban children (NSSO).\n– Girls from rich families (top 20%) are educated for an average 9 years, while girls from poor families get none (bottom 20%) (NFHS-4).\n\nThe Don Bosco Network believes that quality education is the key to breaking the cycle of inequality and poverty in our society. It is committed to rescuing children from oppressive situations of child abuse and negligence. It takes education to children in need, creating opportunities where none exist —regular schools, bridge schools, supplementary (tuition) classes and nutrition, sponsorships and scholarships.</string>
    <string name="skillForYouth">Skill a youth to build our nation. Why is it important?\n\n- At 423 million, India has the highest population of youth in the world. \n- Over ten million are child labourers.\n- 20.7% adolescents are in hazardous employment.\n\nThis huge population is unskilled and unorganised. Their economic wellbeing is dependent on the weather (literally) and the market. Both are unpredictable.\n\nThe Don Bosco Network reaches out to marginalised youth through formal and non-formal technical and life skills training, helping them find jobs or become self-employed, thus creating opportunities for inclusive economic growth in the country.</string>
    <string name="careForErth">Why care for the Earth? Because it keeps us alive. \n\nClimate change impacts every one of us: whether rural or urban. \n\n- India is the 3rd largest greenhouse gas emitter in the world. \n- We process only 19.9% of urban waste. \n- Our energy is 54.6% coal-based. \nThere’s much to transform.\n\nThe Don Bosco Network promotes sustainable lifestyle choices, production, and consumption patterns through awareness creation, skill training and partnerships. It involves children and communities locally to support conservation of forests and water bodies, plant trees, reduce and recycle waste.</string>
    <string name="address">B-33, Street no. 7, \nDashrathpuri, Palam- Dabri Road,\n New Delhi – 110045.</string>
</resources>
