<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".CareForPlanetEarthActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            app:cardCornerRadius="5sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:layout_marginBottom="30sp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/care" />

                    <com.integro.bosconet.customTextView.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10sp"
                        android:text="@string/careForErth"
                        android:textColor="@color/colorBlack"
                        app:fonts="@string/font_Title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="325sp" />

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="50sp"
                        android:layout_marginLeft="25sp"
                        android:layout_marginRight="25sp"
                        android:foreground="?android:attr/selectableItemBackground"
                        card_view:cardElevation="5dp">

                        <com.integro.bosconet.customTextView.CustomTextView
                            android:id="@+id/tvDonate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/border"
                            android:gravity="center"
                            android:text="DONATE"
                            android:textColor="@color/colorWhite"
                            android:textSize="20dp"
                            app:fonts="@string/font_Heading" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
